expanded movie content
